EmcVideoPlayer basic implemented
also sdb comes in

--- a/TODO
+++ b/TODO
@@ -1,4 +1,11 @@
 
+TODO
+====
+ * mediaplayer.py should die, everyone should just directly use
+    EmcVideoPlayer or EmcAudioPlayer
+
+
+
 Just a scratchpad for the moment
 ================================
 
