--- a/TODO
+++ b/TODO
@@ -7,6 +7,17 @@ TODO
  * EmcDialog API is bad, especially the buttons stuff...
 
 
+CHANGES:
+========
+
+EmcUrl:
+ * complete_cb => done_cb
+ * progress_cb => prog_cb
+ * done_cb(url, success, dest)
+ * prog_cb(url, total, received)
+
+
+
 DOCUMENT IMAGE SPECIAL URLS SOMEWHERE
 =====================================
  class EmcImage(EmcBackendableABC):
