Add a new testsuite based on pytest
also implemented tests for EmcObject and Singleton

--- a/TODO
+++ b/TODO
@@ -18,6 +18,7 @@ EmcNotify
  * icon => image
  * close => delete()
 
+MyClass(Singleton)  =>  MyClass(bases, metaclass=Singleton)
 
 
 DOCUMENT IMAGE SPECIAL URLS SOMEWHERE
